# tango-note

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tango-note.spec
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/images/: README.md
installer/: installer.iss
locales/ja/LC_MESSAGES/: tango_note.mo  tango_note.po
src/tango_note/cli/: main.py
src/tango_note/core/: analytics.py  config.py  exceptions.py  i18n.py  models.py  quiz.py  search.py  stats.py  storage.py
src/tango_note/gui/: app.py  handlers.py  main.py  utils.py
src/tango_note/gui/screens/: card_edit.py  deck_list.py  quiz.py  settings.py  stats.py
tests/: conftest.py
tests/cli/: test_main.py
tests/core/: test_analytics.py  test_config.py  test_i18n.py  test_models.py  test_quiz.py  test_search.py  test_stats.py  test_storage.py
tests/gui/: handlers_test.py  test_card_edit.py  test_smoke.py  test_utils.py
tools/: build_installer.py  gen_icon.py  msgfmt.py
