[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tango-note"
version = "1.1.1"
description = "Local vocabulary deck app with CLI and Tkinter GUI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "eyemask57", email = "eyemask57@users.noreply.github.com" }]
dependencies = ["typer>=0.12.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
# Tools for producing the Windows executable + installer. Kept separate
# from ``dev`` because building a release is an occasional task distinct
# from running the test suite.
build = ["pyinstaller>=6.0", "Pillow>=10.0"]

[project.scripts]
tango-note = "tango_note.cli.main:app"
tn = "tango_note.cli.main:app"
tango-note-gui = "tango_note.gui.main:main"
tn-gui = "tango_note.gui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tango_note"]

# Bundle compiled .mo catalogs inside the installed package so that
# importlib.resources can find them at runtime in wheel installs. The
# .po source lives at the repo root and is regenerated locally via
# ``python tools/msgfmt.py`` whenever it changes.
#
# The app icon is force-included the same way, landing at
# ``tango_note/assets/icon.png`` so the GUI can find it after a wheel
# install (see ``tango_note.gui.app._locate_icon``).
[tool.hatch.build.targets.wheel.force-include]
"locales" = "tango_note/locales"
"installer/tango-note_source.png" = "tango_note/assets/icon.png"

[tool.hatch.build]
include = [
    "src/tango_note/**/*.py",
    "locales/**/*.po",
    "locales/**/*.mo",
    "tools/msgfmt.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/tango_note"]
